--- a/DigiKala.Web/Views/Account/Register.cshtml
+++ b/DigiKala.Web/Views/Account/Register.cshtml
@@ -1,44 +1,39 @@
 ﻿@model DigiKala.Core.ViewModels.RegisterViewModel
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "ثبت نام";
     Layout = "~/Views/Shared/_Account.cshtml";
 }
 
-<h1>Register</h1>
+<h4 class="text-center">عضویت در دیجی کالا</h4>
 
-<h4>RegisterViewModel</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Register">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Mobile" class="control-label"></label>
-                <input asp-for="Mobile" class="form-control" />
-                <span asp-validation-for="Mobile" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword" class="control-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+
+<form asp-action="Register">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-group">
+        @*<label asp-for="Mobile" class="control-label"></label>*@
+        <input asp-for="Mobile" class="form-control mt-2" placeholder="شماره موبایل" />
+        <span asp-validation-for="Mobile" class="text-danger validation-error"></span>
     </div>
-</div>
+    <div class="form-group">
+        <input asp-for="Password" class="form-control mt-2" placeholder="کلمه عبور" />
+        <span asp-validation-for="Password" class="text-danger validation-error"></span>
+    </div>
+    <div class="form-group">
+        <input asp-for="ConfirmPassword" class="form-control mt-2" placeholder="تایید کلمه عبور" />
+        <span asp-validation-for="ConfirmPassword" class="text-danger validation-error"></span>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="عضویت" class="btn btn-primary btn-lg btn-block btn-submit mt-2" />
+    </div>
+</form>
+
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <h5 class="mt-2"><a asp-action="Index">قبلا ثبت نام کرده ام</a></h5>
 </div>
 
-@*@section Scripts {
+@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}*@
+}
