--- a/DigiKala.Web/wwwroot/css/account.css
+++ b/DigiKala.Web/wwwroot/css/account.css
@@ -1,2 +1,47 @@
 ﻿body {
+    direction: rtl;
+    font-family: 'B Yekan',Tahoma;
+    background-color: whitesmoke;
+}
+
+a {
+    color: #00bfd6;
+    text-decoration: none;
+}
+
+    a:hover {
+        color: #00bfd6;
+        text-decoration: none;
+    }
+
+.mt-30 {
+    margin-top: 30px;
+}
+
+.mt-50 {
+    margin-top: 50px;
+}
+
+.logo {
+    max-width: 150px;
+    max-height: 80px;
+}
+
+.box-login {
+    position: absolute;
+    background: white;
+    height: auto;
+    padding: 32px;
+    border: 1px solid #ddd;
+}
+
+.btn-submit {
+    color: white;
+    border: 1px solid #008999;
+    background: #00bfd6;
+    width: 100%;
+}
+
+.validation-error {
+    color: #ef5662;
 }
