register view and view model added.

--- a/DigiKala.Web/Views/Account/Register.cshtml
+++ b/DigiKala.Web/Views/Account/Register.cshtml
@@ -30,8 +30,8 @@
 </form>
 
 
-<div>
-    <h5 class="mt-2"><a asp-action="Index">قبلا ثبت نام کرده ام</a></h5>
+<div class="form-group">
+    <h6 class="mt-2"><a asp-action="Login">قبلا ثبت نام کرده ام</a></h6>
 </div>
 
 @section Scripts {
