--- a/DigiKala.Web/Views/Shared/_Account.cshtml
+++ b/DigiKala.Web/Views/Shared/_Account.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>@ViewBag.Title</title>
