--- a/DigiKala.Web/Views/Shared/_Account.cshtml
+++ b/DigiKala.Web/Views/Shared/_Account.cshtml
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-
 <html lang="fa" dir="rtl">
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>@ViewBag.Title</title>
     <link href="~/css/bootstrap.rtl.css" rel="stylesheet" />
     <link href="~/css/account.css" rel="stylesheet" />
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <div class="container-fluid">
